feat: Add additional source-destination mappings for Terragrunt, Turbowatch, and Vitest configuration files

--- a/.kliproject.json
+++ b/.kliproject.json
@@ -55,8 +55,20 @@
           "destination": "package.json"
         },
         {
+          "source": "terragrunt.hcl",
+          "destination": "terragrunt.hcl"
+        },
+        {
           "source": "serverless.hcl",
           "destination": "serverless.hcl"
+        },
+        {
+          "source": "turbowatch.ts",
+          "destination": "turbowatch.ts"
+        },
+        {
+          "source": "vitest.config.ts",
+          "destination": "vitest.config.ts"
         }
       ]
     }
